Добавлена поддержка узлов Args(In и Out), Procedure(Call и Definition), Program; Общий рефакторинг;

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,4 @@ tags.*
 *.swp
 .idea
 
-sources/*/CMakeCache.txt
-sources/*MakeFiles/
-sources/*Makefile
-sources/*cmake_install.cmake
-sources/*im1ToIm2
+sources/im1ToIm2/bin/
