Updated CMake files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,9 @@
 cmake_minimum_required(VERSION 2.8.8)
 project(main)
 
-###
-set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)
- 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
-set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
- 
-set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
- 
-include_directories("${PROJECT_INCLUDE_DIR}")
-include_directories("${PROJECT_SOURCE_DIR}")
-####
 
 add_subdirectory("sources/lyapas_im0")
-#add_subdirectory("sources/im0_im1")
+add_subdirectory("sources/im0_im1")
 add_subdirectory("sources/im1_im2")
 
