--- a/sources/im0_im1/CMakeLists.txt
+++ b/sources/im0_im1/CMakeLists.txt
@@ -1,13 +1,22 @@
 cmake_minimum_required(VERSION 2.8.8)
 project(im0_im1)
 
-find_package(BISON)
-BISON_TARGET(MyParser im0_im1.y ${CMAKE_BINARY_DIR}/im0_im1.c)
+find_package(BISON REQUIRED)
+SET(BisonOutput ${PROJECT_SOURCE_DIR}/im0_im1.c)
+IF(BISON_FOUND)
+    ADD_CUSTOM_COMMAND(
+        OUTPUT ${BisonOutput}
+        COMMAND ${BISON_EXECUTABLE}
+                --output=${BisonOutput}
+                ${PROJECT_SOURCE_DIR}/im0_im1.y
+        COMMENT "Generating im0_im1.c"
+    )
+ENDIF()
 
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-#
-include_directories(${CMAKE_SOURCE_DIR})
-set(SOURCE_FILES im0_im1.c print_json.c)
+set(SOURCE_FILES
+    ${PROJECT_SOURCE_DIR}/im0_im1.c
+    ${PROJECT_SOURCE_DIR}/print_json.c
+)
+
 add_executable(im0_im1 ${SOURCE_FILES})
-
 target_link_libraries(im0_im1 "-ljansson")
