--- a/sources/lyapas_im0/CMakeLists.txt
+++ b/sources/lyapas_im0/CMakeLists.txt
@@ -1,11 +1,21 @@
 cmake_minimum_required(VERSION 2.8.8)
 project(lyapas_im0)
 
-find_package(FLEX)
-FLEX_TARGET(MyFlex lyapas_im0.l ${CMAKE_BINARY_DIR}/lyapas_im0.c)
+find_package(FLEX REQUIRED)
+SET(FlexOutput ${PROJECT_SOURCE_DIR}/lyapas_im0.c)
+IF(FLEX_FOUND)
+    ADD_CUSTOM_COMMAND(
+        OUTPUT ${FlexOutput}
+        COMMAND ${FLEX_EXECUTABLE}
+                --outfile=${FlexOutput}
+                ${PROJECT_SOURCE_DIR}/lyapas_im0.l
+        COMMENT "Generating lyapas_im0.c"
+    )
+ENDIF()
 
-include_directories(${CMAKE_SOURCE_DIR})
-set(SOURCE_FILES ${CMAKE_BINARY_DIR}/lyapas_im0.c)
+set(SOURCE_FILES
+    ${PROJECT_SOURCE_DIR}/lyapas_im0.c
+)
+
 add_executable(lyapas_im0 ${SOURCE_FILES})
-
 target_link_libraries(lyapas_im0 "-lfl")
