Updated CMake files: exclude creating temporary files while building project

--- a/sources/im0_im1/CMakeLists.txt
+++ b/sources/im0_im1/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.8)
 project(im0_im1)
 
 find_package(BISON REQUIRED)
-SET(BisonOutput ${PROJECT_SOURCE_DIR}/im0_im1.c)
+SET(BisonOutput ${PROJECT_BINARY_DIR}/im0_im1.c)
 IF(BISON_FOUND)
     ADD_CUSTOM_COMMAND(
         OUTPUT ${BisonOutput}
@@ -14,8 +14,15 @@ IF(BISON_FOUND)
 ENDIF()
 
 set(SOURCE_FILES
-    ${PROJECT_SOURCE_DIR}/im0_im1.c
+    ${PROJECT_BINARY_DIR}/im0_im1.c
     ${PROJECT_SOURCE_DIR}/print_json.c
+)
+
+#copy header to build directory; needed for im0_im1.c
+#FIXME: if you know good solve
+configure_file (
+    ${PROJECT_SOURCE_DIR}/print_json.h
+    ${PROJECT_BINARY_DIR}/print_json.h
 )
 
 add_executable(im0_im1 ${SOURCE_FILES})
