--- a/sources/lyapas_im0/CMakeLists.txt
+++ b/sources/lyapas_im0/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.8)
 project(lyapas_im0)
 
 find_package(FLEX REQUIRED)
-SET(FlexOutput ${PROJECT_SOURCE_DIR}/lyapas_im0.c)
+SET(FlexOutput ${PROJECT_BINARY_DIR}/lyapas_im0.c)
 IF(FLEX_FOUND)
     ADD_CUSTOM_COMMAND(
         OUTPUT ${FlexOutput}
@@ -14,7 +14,7 @@ IF(FLEX_FOUND)
 ENDIF()
 
 set(SOURCE_FILES
-    ${PROJECT_SOURCE_DIR}/lyapas_im0.c
+    ${PROJECT_BINARY_DIR}/lyapas_im0.c
 )
 
 add_executable(lyapas_im0 ${SOURCE_FILES})
