--- a/sources/im2_im3/CMakeLists.txt
+++ b/sources/im2_im3/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 
 set(SOURCE_FILES
     main.cpp
+    dvyyaz.cpp
 )
 
 add_executable(im2_im3 ${SOURCE_FILES})
+target_link_libraries(im2_im3 translation_module)
