[+] вынес backward в отдельный модуль

--- a/sources/im1_im2/CMakeLists.txt
+++ b/sources/im1_im2/CMakeLists.txt
@@ -2,7 +2,6 @@ cmake_minimum_required(VERSION 2.8.8)
 project(im1_im2)
 
 set(SOURCE_FILES
-    libraries/backward-cpp/backward.cpp
     main.cpp
     source/CompositeCmd/ICmd.cpp
     source/CompositeCmd/ICmd.h
@@ -40,5 +39,5 @@ set(SOURCE_FILES
     source/CompositeCmd/Leafs/AsmCmd.h
 )
 
-add_executable(im1_im2 ${SOURCE_FILES})
+add_executable(im1_im2 ${SOURCE_FILES} ${BACKWARD_ENABLE})
 target_link_libraries(im1_im2 jsoncpp "-ldw")
