[*] JSON typedef в TranslationModule: int=>Json::Value

--- a/sources/libs/translation_module/CMakeLists.txt
+++ b/sources/libs/translation_module/CMakeLists.txt
@@ -10,4 +10,5 @@ set(TRANSLATION_MODULE_SRCS
 )
 
 add_library(translation_module STATIC ${TRANSLATION_MODULE_SRCS})
+target_link_libraries(translation_module jsoncpp)
 target_include_directories(translation_module INTERFACE "${PROJECT_INCLUDE_DIR}")
