--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,4 +36,5 @@ add_subdirectory("sources/lyapas_im0")
 add_subdirectory("sources/im0_im1")
 add_subdirectory("sources/im1_im2")
 add_subdirectory("sources/im2_im3")
+add_subdirectory("sources/im3_im4")
 add_subdirectory("sources/im4_im5")
