--- a/sources/im3_im4/CMakeLists.txt
+++ b/sources/im3_im4/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCE_FILES
     steckoyaz.cpp
     function.cpp
     function_signature.cpp
+    array_index.cpp
 )
 
 add_executable(im3_im4 ${SOURCE_FILES} ${BACKWARD_ENABLE})
