--- a/sources/im4_im5/CMakeLists.txt
+++ b/sources/im4_im5/CMakeLists.txt
@@ -17,6 +17,9 @@ set(SOURCE_FILES
     complexoyaz.cpp
     labels_counter.cpp
     variables_counter.cpp
+    functional_replacers.cpp
+    free_label_replacer.cpp
+    free_var_replacer.cpp
 )
 add_library(${LIB_NAME}
     ${SOURCE_FILES}
