[*] перенес общие Replacer'ы в translation_module

--- a/sources/libs/translation_module/src/CMakeLists.txt
+++ b/sources/libs/translation_module/src/CMakeLists.txt
@@ -1,15 +1,20 @@
 cmake_minimum_required(VERSION 2.8.8)
 project(${LIB_NAME})
 
-set(PROJECT_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/translation_module)
-set(TRANSLATION_MODULE_SRCS
-    ${PROJECT_SOURCE_DIR}/translation_module.cpp
-    ${PROJECT_SOURCE_DIR}/cmd_info.cpp
+set(ROOT translation_module)
+
+set(SOURCES
+    ${ROOT}/cmd_info.cpp
+    ${ROOT}/free_label_replacer.cpp
+    ${ROOT}/free_var_replacer.cpp
+    ${ROOT}/labels_counter.cpp
+    ${ROOT}/translation_module.cpp
+    ${ROOT}/variables_counter.cpp
 )
 
-add_library(${LIB_NAME} STATIC ${TRANSLATION_MODULE_SRCS})
+add_library(${LIB_NAME} STATIC ${SOURCES})
 target_link_libraries(${LIB_NAME} shared_utils jsoncpp)
-target_include_directories(${LIB_NAME} INTERFACE "${PROJECT_INCLUDE_DIR}")
+target_include_directories(${LIB_NAME} PRIVATE "${ROOT}")
+target_include_directories(${LIB_NAME} INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}")
