--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,3 +38,4 @@ add_subdirectory("sources/im1_im2")
 add_subdirectory("sources/im2_im3")
 add_subdirectory("sources/im3_im4")
 add_subdirectory("sources/im4_im5")
+add_subdirectory("sources/im7_im8")
